--- a/懒加载.html
+++ b/懒加载.html
@@ -33,6 +33,7 @@
     <img data-src="./images/1.png" alt=""> -->
 </body>
 <script>
+        // 懒加载
         var imgs = document.querySelectorAll('img');
 
         //offsetTop是元素与offsetParent的距离，循环获取直到页面顶部
